# WebserverParser

./: CMakeLists.txt  README.md
src/: main.cpp  webServerAnalyser.cpp  webServerAnalyser.h
tests/: hostAccessTest_small.txt  resourceAccessTest_small.txt  test_webServerAnalyser.cpp
